# roof-maxx-analytics

./: .gitignore  README.md  activate_project.sh  requirements.txt
envs/roof_maxx_analytics/: pyproject.toml
envs/roof_maxx_analytics/projects/roof_maxx_analytics/app/: streamlit_dashboard.py
envs/roof_maxx_analytics/projects/roof_maxx_analytics/src/: market_analysis.py
projects/roof_maxx_analytics/app/: streamlit_dashboard.py
projects/roof_maxx_analytics/src/: market_analysis.py
